# py-nepali

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTION.md  Makefile  README.md  SECURITY.md  codecov.yml  demo.py  pyproject.toml  requirements.txt  setup.py  test.py
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: linting.yml  python-package-publish.yml  python-package.yml
nepali/: __init__.py  char.py  chars.py  constants.py  converter.py  date_converter.py  dates.py  datetime.py  exceptions.py  number.py  phone_number.py  timezone.py  utils.py
nepali/datetime/: __init__.py  _converter.py  _datetime.py  _formarter.py  _formatter.py  _humanize.py  _nepalimonth.py  _nepaliweek.py  constants.py  utils.py
nepali/datetime/parser/: __init__.py  _parser.py  validators.py
nepali/locations/: __init__.py  _data.py  _locations.py  models.py  utils.py
nepali/number/: __init__.py  _nepalinumber.py  _number.py  nepalinumber.py  utils.py
nepali/templatetags/: nepalidatetime.py  nepalinumber.py
nepali/tests/: test_date_converter.py  test_datetime.py  test_humanize.py  test_locations.py  test_nepalimonth.py  test_nepaliweek.py  test_number.py  test_parser.py  test_phone_number.py  test_timezone.py
tests/: test_date_converter.py  test_datetime.py  test_humanize.py  test_locations.py  test_nepalimonth.py  test_nepaliweek.py  test_number.py  test_phone_number.py  test_timezone.py
